--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200&family=Pacifico&family=Shadows+Into+Light&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet" />
-    <!-- Logo -->
-    <script src="https://kit.fontawesome.com/844da01e50.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <section class="header">
       <nav>
         <a href="index.html"><img src="/img/logo.png" alt="logo" /></a>
         <div class="nav-list" id="navLinks">
+          <!-- <i class="fa-solid fa-house"></i>
+          <i class="fa-solid fa-xmark"></i> -->
           <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
           <ul>
             <li><a href="">HOME</a></li>
             <li><a href="">ABOUT</a></li>
+            <!-- <li><a href="">COURSE</a></li> -->
             <li><a href="">COURSE</a></li>
             <li><a href="">BLOG</a></li>
             <li><a href="">CONTACK</a></li>
@@ -166,6 +167,7 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum deleniti quia expedita nesciunt eaque, ipsum eveniet facilis quod mollitia <br> odit fuga cupiditate adipisci, provident consequatur?</p>
     </footer>
     <!-- javascript -->
+    <script src="https://kit.fontawesome.com/844da01e50.js" crossorigin="anonymous"></script> <!--Logo text Aweshome-->>
     <script>
       var navLinks = document.getElementById("navLinks");
       function showMenu() {
