--- a/index.html
+++ b/index.html
@@ -165,6 +165,14 @@
     <footer>
       <h4>About Us</h4>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum deleniti quia expedita nesciunt eaque, ipsum eveniet facilis quod mollitia <br> odit fuga cupiditate adipisci, provident consequatur?</p>
+      <div class="icons">
+        <i class="fa fa-facebook"></i>
+        <i class="fa fa-twitter"></i>
+        <i class="fa fa-instagram"></i>
+        <i class="fa fa-youtube"></i>
+        <i class="fa fa-linkedin"></i>
+      </div>
+      <p>Dibuat sepenuh "<i class="fa-solid fa-heart"></i>" oleh Aufa </p>
     </footer>
     <!-- javascript -->
     <script src="https://kit.fontawesome.com/844da01e50.js" crossorigin="anonymous"></script> <!--Logo text Aweshome-->>
